Bug 656284 - Fix clipped XUL progressmeter on Windows. r=roc
UltraBlame original commit: 93656440018a325eb9e3467e3847b7e4e943a2ea

--- a/layout/reftests/forms/progress/style.css
+++ b/layout/reftests/forms/progress/style.css
@@ -23,6 +23,8 @@ div.progress-bar {
 
 
 
+  -moz-box-sizing: border-box;
+
   
   background-color: ThreeDShadow;
 }
